--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "marked": "^15.0.7",
     "puppeteer": "^24.2.1"
   }
 }
